fix: Compilation errors in WebAI services
- Fix ObjectClassDefinition annotation defaults
- Fix toList() -> Collectors.toList()
- Simplify WebAIModelService for compatibility